# bili_ticket_rush

backend/: Cargo.toml
backend/src/: api.rs  taskmanager.rs
common/: Cargo.toml
common/src/: cookie_manager.rs  fe_sign.rs  gen_cp.rs  impersonate_http.rs  lib.rs  push.rs  utils.rs
frontend/: Cargo.toml
frontend/src/ui/tabs/: settings.rs
